<resources>
    <string name="app_name">success</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Upload</string>
    <string name="title_notifications">Search</string>
    <string name="login">注册</string>
    <string name="sign_up">登录</string>
    <string name="take_photo">拍照</string>
    <string name="choose_photo">选择照片</string>
    <string name="just_a_picture">这是图片</string>
    <string name="title_activity_upload_word">Upload_Word</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_change_pass">ChangePass</string>
</resources>