<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".takePhoto">

    <Button
        android:id="@+id/take_photo"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:onClick="takePhoto"
        android:text="@string/take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/choose_from_album"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:onClick="choosePhoto"
        android:text="@string/choose_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_photo"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/choose_txt"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:onClick="chooseTxt"
        android:text="上传文本"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_from_album"
        app:layout_constraintVertical_bias="0.13999999" />

    <ImageView
        android:id="@+id/get_imageView"
        android:layout_width="181dp"
        android:layout_height="129dp"
        android:contentDescription="@string/just_a_picture"
        app:layout_constraintBottom_toTopOf="@+id/take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_from_album"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_from_album"
        app:layout_constraintVertical_bias="0.13999999" />


</androidx.constraintlayout.widget.ConstraintLayout>